# multi-agent

./: .env.example  .gitignore  .security_key  A2A_Agent_Technical_Details_Report.md  A2A_DISTRIBUTED_ARCHITECTURE_PLAN.md  A2A_LLM_FIRST_ARCHITECTURE.md  A2A_LLM_FIRST_ARCHITECTURE_ENHANCED.md  A2A_LLM_Response_Quality_Evaluation_Report.md  A2A_SDK_OFFICIAL_USAGE_GUIDE.md  A2A_UNIFIED_SYSTEM_PLAN.md  BUILD_REPORT.md  CHAT_INPUT_CONTRACT.md  CHERRYAI_ADVANCED_UI_UX_DESIGN.md  CHERRYAI_COMPLETE_INTEGRATION_SUMMARY.md  CHERRYAI_ENTERPRISE_FEATURES_PLAN.md  CHERRYAI_V9_COMPLETION_REPORT.md  CherryAI_A2A_SDK_0.2.9_Compliance_Final_Report.md  CherryAI_Commit_5972434_Complete_Analysis_Report.md  CherryAI_Commit_5972434_Deep_Analysis_Report.md  CherryAI_Comprehensive_Agent_Validation_Report.md  CherryAI_Comprehensive_Test_Plan.md  CherryAI_Deep_System_Analysis_Report.md  CherryAI_Final_Test_Report.md  CherryAI_LLM_First_Enhancement_Plan.md  CherryAI_MCP_Agents_Deep_Analysis_Report.md  CherryAI_Phase4_Enterprise_Completion_Report.md  DEEP_IMPLEMENTATION_ANALYSIS_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  E2E_TEST_REPORT_CURRENT.md  ENV_SETUP_GUIDE.md  FINAL_LLM_FIRST_OPTIMIZATION_RESULTS.md  IMPLEMENTATION_COMPLETION_REPORT.md  LLM_FIRST_UNIVERSAL_DOMAIN_ENGINE_SPECIFICATION.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_SUMMARY.md  NUMPY_PANDAS_COMPATIBILITY_REPORT.md  OLLAMA_IMPROVEMENT_GUIDE.md  README.md  README_CACHE_SCRIPTS.md  (+435 more)
.streamlit/: config.toml
.vercel/: project.json
a2a_ds_servers/: A2A_WRAPPER_MIGRATION_PLAN.md  README.md  __init__.py  a2a_orchestrator.py  a2a_orchestrator.py.backup  a2a_orchestrator.py.bak1  a2a_orchestrator.py.bak2  a2a_orchestrator_backup_20250630_224538.py  a2a_orchestrator_fixed.py  a2a_orchestrator_simple_backup.py  a2a_orchestrator_v3.py  a2a_orchestrator_v4.py  a2a_orchestrator_v6.py  a2a_orchestrator_v6.py.bak  a2a_orchestrator_v6.py.bak2  a2a_orchestrator_v6_question_driven.py  a2a_orchestrator_v7_backup_20250630_205534.py  a2a_orchestrator_v7_backup_20250630_220913.py  a2a_orchestrator_v7_universal.py  a2a_orchestrator_v7_universal_complete.py  a2a_orchestrator_v8_fixed.py  a2a_orchestrator_v9_mcp_enhanced.py  ai_ds_team_data_cleaning_server.py  ai_ds_team_data_cleaning_server.py.bak  ai_ds_team_data_cleaning_server.py.final1  ai_ds_team_data_cleaning_server_backup.py  ai_ds_team_data_cleaning_server_enhanced.py  ai_ds_team_data_cleaning_server_v2.py  ai_ds_team_data_loader_server.py  ai_ds_team_data_loader_server.py.bak1  ai_ds_team_data_loader_server.py.bak10  ai_ds_team_data_loader_server.py.bak5  ai_ds_team_data_loader_server.py.bak9  ai_ds_team_data_loader_server.py.final1  ai_ds_team_data_loader_server.py.final2  ai_ds_team_data_loader_server.py.getai1  ai_ds_team_data_loader_server.py.getai2  ai_ds_team_data_loader_server.py.partkind2  ai_ds_team_data_loader_server_v2.py  ai_ds_team_data_visualization_server.py  (+166 more)
a2a_servers/: mock_pandas_server.py  pandas_final.py  pandas_server.py  pandas_server_fixed.py  pandas_server_working.py  pandas_working.py  pandas_working_simple.py  registry_server.py
analysis/: final_llm_first_solution.md  llm_bottleneck_root_cause_analysis.md  pure_llm_first_optimization_strategy.md
apps/: dashboard.py  user_app.py
artifacts/: metadata.json
config/: __init__.py  agents.json  agents_config.py
core/: __init__.py  a2a_agent_tracer.py  a2a_data_analysis_executor.py  a2a_task_executor.py  a2a_task_executor_backup.py  advanced_code_tracker.py  artifact_system.py  auto_data_profiler.py  data_lineage.py  data_manager.py  data_manager_backup.py  debug_manager.py  direct_analysis.py  enhanced_a2a_communicator.py  enhanced_a2a_executor.py  enhanced_langfuse_tracer.py  enhanced_log_analyzer.py  enhanced_tracing_system.py  error_recovery.py  frontend_backend_bridge.py  integrated_alert_system.py  intelligent_planner.py  intelligent_result_interpreter.py  knowledge_bank_ui_integration.py  langfuse_ai_ds_team_wrapper.py  langfuse_decorators.py  langfuse_enhanced_a2a_executor.py  langfuse_otel_integration.py  langfuse_session_tracer.py  llm_factory.py  llm_first_engine.py  llm_first_ui_integration.py  main_app_engine.py  multi_agent_orchestrator.py  orchestration_engine.py  orchestration_engine_backup.py  performance_monitor.py  performance_optimizer.py  phase3_integration_layer.py  production_monitoring_core.py  (+10 more)
debug_logs/: h2o_automl.py
docs/: A2A_AGENT_MIGRATION_GUIDE.md  A2A_AGENT_VALIDATION_REPORT.md  A2A_MIGRATION_SUCCESS_GUIDE.md  A2A_SUCCESS_PATTERNS_GUIDE.md  AGENT_IMPLEMENTATION_STATUS.md  AGENT_IMPORT_IMPROVEMENT_DOCUMENTATION.md  API_REFERENCE.md  CHERRYAI_COMPREHENSIVE_AGENT_TESTING_PLAN.md  CHERRY_AI_AGENT_MAPPING.md  CherryAI_Advanced_Enhancement_Implementation_Plan.md  CherryAI_Final_Fix_Summary.md  CherryAI_Final_Implementation_Report.md  CherryAI_Frontend_Backend_Integration_Fix_Report.md  CherryAI_Frontend_Backend_Integration_Test_Plan.md  CherryAI_Pandas_Agent_Integration_Plan.md  CherryAI_Phase1-4_Complete_Guide.md  CherryAI_Realtime_Streaming_Architecture.md  CherryAI_Startup_Scripts_Update_Report.md  CherryAI_Unified_Data_Loading_System_Design.md  E2E_Test_Results.md  HARDCODING_REMOVAL_REPORT.md  HARDCODING_REMOVAL_VERIFICATION.md  INSTALLATION_GUIDE.md  PERFECT_LANGFUSE_INTEGRATION_GUIDE.md  PHASE0_DATACLEANING_VERIFICATION_REPORT.md  PROJECT_SUMMARY.md  Production_Deployment_Guide.md  REMAINING_AGENTS_IMPLEMENTATION_PLAN.md  START_STOP_SCRIPTS_LLM_FIRST_UPDATE.md  TROUBLESHOOTING.md  UNIVERSAL_ENGINE_API_REFERENCE.md  UNIVERSAL_ENGINE_DEPLOYMENT_GUIDE.md  UNIVERSAL_ENGINE_TROUBLESHOOTING.md  UNIVERSAL_ENGINE_USER_GUIDE.md  USER_GUIDE.md  langfuse_a2a_integration_guide.md
examples/: enhanced_langfuse_integration_example.py
legacy/: cherry_ai_legacy.py  planning_engine_original.py  query_router.py  smart_router.py
legacy_mcp_servers/: mcp_anomaly_detection.py  mcp_data_preprocessing_tools.py  mcp_dataloader_agent.py  mcp_file_management.py  mcp_semiconductor_equipment_analysis.py  mcp_semiconductor_yield_analysis.py
mcp-config/: data_preprocessor_tools.json  (+9 more)
ui/: __init__.py  (+27 more)
(+1913 files in other folders)
