[project]
name = "cherryai"
version = "0.1.0"
description = "CherryAI - A2A MCP Data Science Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "a2a-sdk>=0.2.9",
    "fastmcp>=1.0",
    "mcp[cli]>=1.5.0",
    "httpx>=0.28.1",
    "networkx>=3.4.2",
    "pydantic>=2.11.4",
    "click>=8.1.8",
    "nest-asyncio>=1.6.0",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.0.9",
    "uvicorn>=0.23.0",
    "fastapi>=0.104.0"
]

[project.scripts]
cherryai-mcp = "a2a_mcp_registry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=1.0.0",
    "pytest-xprocess",
    "requests",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
advanced-ml = [
    "imbalanced-learn>=0.11.0",
    "pingouin>=0.5.0",
    "mlxtend>=0.23.0",
    "umap-learn>=0.5.0",
    "shap>=0.45.0",
    "lime>=0.2.0",
    "optuna>=3.5.0",
    "scikit-learn>=1.5.1",
    "plotly>=5.23.0",
]
monitoring = [
    "langsmith>=0.0.87",
    "wandb>=0.16.0",
]

[tool.poetry.group.dev.dependencies]
# ... existing code ...

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*", "mcp_servers*", "a2a_servers*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
